<resources>
    <string name="app_name">IssueV2</string>
    <string name="hello">Hello</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="connect">Connect</string>
    <string name="welcome">Welcome</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="submit">Submit</string>
    <string name="incorrect_login">Incorrect login</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="empty_field">Field can not be empty</string>
    <string name="no_such_user">No user with such login/password</string>
    <string name="passwords_not_the_same">Passwords must be the same!</string>
    <string name="back">Back</string>
    <string name="role">Role: %s</string>
    <string name="admin">Admin</string>
    <string name="manager">Manager</string>
    <string name="user">User</string>
    <string name="user_role">User role</string>
    <string name="user_info">User info</string>
    <string name="save">Save</string>
    <string name="change_password">Change password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>

    <string-array name="user_roles">
        <item>Admin</item>
        <item>Manager</item>
        <item>User</item>
    </string-array>

    <string-array name="auth_headers">
        <item>Login</item>
        <item>Registration</item>
    </string-array>
</resources>