<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.onix.internship.survay.ui.roles.admin.userdetails.changepassword.ChangePasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/changePasswordOldContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/change_password_field_horizontal_margin"
            android:hint="@string/old_password"
            app:displayError="@{viewModel.errorOldPassword}"
            app:layout_constraintBottom_toTopOf="@+id/changePasswordNewContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/changePasswordOld"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:singleLine="true"
                android:text="@={viewModel.model.oldPassword}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/changePasswordNewContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/change_password_field_horizontal_margin"
            android:hint="@string/new_password"
            app:displayError="@{viewModel.errorPassword}"
            app:layout_constraintBottom_toTopOf="@+id/changePasswordConfirmContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/changePasswordOldContainer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/changePasswordNew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:singleLine="true"
                android:text="@={viewModel.model.newPassword}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/changePasswordConfirmContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/change_password_field_horizontal_margin"
            android:hint="@string/password_confirmation"
            app:layout_constraintBottom_toTopOf="@+id/changePasswordSave"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/changePasswordNewContainer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/changePasswordConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:singleLine="true"
                android:text="@={viewModel.model.confirmedPassword}" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/changePasswordSave"
            style="@style/authButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.onSaveClick()}"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/changePasswordConfirmContainer" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>